add nav bar to every page in view

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
   <!-- TODO: Add a controller for our todo list -->
   <div>
+    <div ng-include=" 'partials/navbar.html' "></div>
     <div class="row">
       <div class="col-xs-6 col-xs-offset-3">
         <!-- Let's call a js function from our HTML. wat? -->
