--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
   <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
   <script src="app/controllers/ItemListCtrl.js"></script>
+  <script src="app/controllers/NavCtrl.js"></script>
 </body>
 </html>
