--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
   <script type="text/javascript" src="lib/node_modules/angular/angular.min.js"></script>
   <script type="text/javascript" src="lib/node_modules/angular-route/angular-route.min.js"></script>
   <script type="text/javascript" src="app/app.js"></script>
-  <script src="app/factories/ItemFactory.js"></script>
+  <script src="app/factory/ItemFactory.js"></script>
   <script src="app/controllers/ItemListCtrl.js"></script>
   <script src="app/controllers/NavCtrl.js"></script>
   <script src="app/controllers/ItemDetailCtrl.js"></script>
+  <script src="app/controllers/ItemNewCtrl.js"></script>
 </body>
 </html>
